# time-travel-canister-debugger-for-ICP

./: .gitignore  Cargo.toml  README.md
agent-js/: package-lock.json  package.json
agent-js/src/: index.ts
crates/ic-debug-cli/: Cargo.toml
crates/ic-debug-cli/src/: diff.rs  main.rs  recorder.rs  replay.rs  serve.rs  store.rs
crates/ic-debug-cli/src/instrument/: agent_js.rs  detect.rs  diff.rs  edit.rs  mod.rs  motoko.rs  parse.rs  prompt.rs  tests.rs
crates/ic-debug-core/: Cargo.toml
crates/ic-debug-core/src/: lib.rs
crates/ic-debug-trace/: Cargo.toml
crates/ic-debug-trace-macros/: Cargo.toml
crates/ic-debug-trace-macros/src/: lib.rs
crates/ic-debug-trace/src/: lib.rs
docs/: GUIDE.md
examples/: collect.mjs  icp.yaml  package-lock.json  package.json
examples/canisters/escrow/: Cargo.toml  escrow.did
examples/canisters/escrow/src/: lib.rs
examples/canisters/frontend_api/: Cargo.toml  frontend_api.did
examples/canisters/frontend_api/src/: lib.rs
examples/canisters/ledger/: Cargo.toml
examples/canisters/ledger/src/: lib.rs
examples/canisters/motoko_escrow/src/: main.mo
examples/canisters/motoko_frontend_api/src/: main.mo
examples/canisters/motoko_ledger/src/: main.mo
examples/canisters/motoko_notifications/src/: main.mo
examples/canisters/notifications/: Cargo.toml  notifications.did
examples/canisters/notifications/src/: lib.rs
examples/scripts/: 01-hello-trace-motoko.mjs  01-hello-trace.mjs  02-multi-canister-motoko.mjs  02-multi-canister.mjs  03-flag-an-error-motoko.mjs  03-flag-an-error.mjs  04-silent-error-motoko.mjs  04-silent-error.mjs  README.md
motoko/src/: Cbor.mo  Trace.mo  Types.mo
schema/: event.schema.json  trace.did
test-fixtures/: FINDINGS.md
test-fixtures/stress-debugger/: stress_traces.py
test-fixtures/stress-wizard/: expected_motoko.md  expected_rust.md  stress_motoko.mo  stress_motoko_bootstrap.mo  stress_rust.rs
ui/: index.html
ui/src/: App.css  App.tsx  index.css
