[workspace]
resolver = "2"
members = [
    "crates/ic-debug-core",
    "crates/ic-debug-trace",
    "crates/ic-debug-trace-macros",
    "crates/ic-debug-cli",
    "examples/canisters/frontend_api",
    "examples/canisters/escrow",
    "examples/canisters/notifications",
    "examples/canisters/ledger",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/example/ic-debug"

[workspace.dependencies]
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
candid = "0.10"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
ciborium = "0.2"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
axum = "0.7"
uuid = { version = "1", default-features = false, features = ["serde"] }
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
dialoguer = "0.11"
similar = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
