[package]
name = "ic-debug-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Record, replay, diff, and serve ic-debug traces."

[[bin]]
name = "ic-debug"
path = "src/main.rs"

[dependencies]
ic-debug-core = { path = "../ic-debug-core" }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = "1"
uuid = { workspace = true, features = ["v4"] }
base64 = { workspace = true }
hex = { workspace = true }
ciborium = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
