[package]
name = "ic-debug-trace-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Attribute macros for ic-debug (#[trace_method])."

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
